--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -10,17 +11,20 @@
     "@types/node": "^16.18.97",
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.3.0",
+    "@types/react-redux": "^7.1.33",
     "axios": "^1.6.8",
-    "buffer": "^6.0.3",
-    "crypto-browserify": "^3.12.0",
-    "jose": "^5.3.0",
-    "jsonwebtoken": "^9.0.2",
+    "formik": "^2.4.6",
+    "jwt-decode": "^4.0.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
+    "react-jwt": "^1.2.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
     "sort-by": "^1.2.0",
     "styled-components": "^6.1.11",
     "typescript": "^4.9.5",
