--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://mikael-espinola.github.io/b2bit",
+  "homepage": "https://mikael-espinola.github.io/b2bit/",
   "name": "b2bit",
   "version": "0.1.0",
   "private": true,
